feat (update) v-1.0.4 版本更新内容

--- a/BCX_Wallet/app/build.gradle
+++ b/BCX_Wallet/app/build.gradle
@@ -102,4 +102,5 @@ dependencies {
     implementation project(':module_mine')
     implementation project(':library_base')
     implementation project(':cocos_bcx_sdk')
+    implementation project(':module_zxing')
 }
