--- a/BCX_Wallet/module_asset/build.gradle
+++ b/BCX_Wallet/module_asset/build.gradle
@@ -37,4 +37,6 @@ dependencies {
     implementation 'org.greenrobot:eventbus:3.1.1'
     //ARouter
     annotationProcessor rootProject.ext.dependencies["arouter-annotationProcessor"]
+    // tabLayout
+    implementation 'com.flyco.tablayout:FlycoTabLayout_Lib:2.1.2@aar'
 }
