--- a/BCX_Wallet/module_asset/src/main/AndroidManifest.xml
+++ b/BCX_Wallet/module_asset/src/main/AndroidManifest.xml
@@ -10,6 +10,7 @@
         <activity android:name=".ui.coin_type_select.CoinSelectActivity" />
         <activity android:name=".ui.contract_detail.ContractRecordDetailActivity" />
         <activity android:name=".ui.nh_transfer_detail.NHTransferDealDetailActivity" />
+        <activity android:name=".nh_order_manager.OrderManageActivity" />
 
         <meta-data
             android:name="design_width_in_dp"
