--- a/BCX_Wallet/app/build.gradle
+++ b/BCX_Wallet/app/build.gradle
@@ -101,6 +101,6 @@ dependencies {
     implementation project(':module_login')
     implementation project(':module_mine')
     implementation project(':library_base')
-    implementation project(':cocos_bcx_sdk')
+    implementation project(':cocos_sdk')
     implementation project(':module_zxing')
 }
