--- a/BCX_Wallet/module_mine/src/main/AndroidManifest.xml
+++ b/BCX_Wallet/module_mine/src/main/AndroidManifest.xml
@@ -11,6 +11,7 @@
         <activity android:name=".join_community.JoinCommunityActivity" />
         <activity android:name=".system_setting.SystemSettingActivity" />
         <activity android:name=".account_manage.AccountManagerListActivity" />
+        <activity android:name=".asset_overview.NHAssetDetailActivity" />
         <activity
             android:name=".contact.EditContactActivity"
             android:windowSoftInputMode="adjustResize" />
