feat (SaleNHAssetActvitity) Adding sale nh aseet page about symbol selection layout and selection logic,

--- a/BCX_Wallet/module_mine/src/main/AndroidManifest.xml
+++ b/BCX_Wallet/module_mine/src/main/AndroidManifest.xml
@@ -13,6 +13,7 @@
         <activity android:name=".account_manage.AccountManagerListActivity" />
         <activity android:name=".asset_overview.NHAssetDetailActivity" />
         <activity android:name=".asset_operate.sale_nhasset.SaleNHAssetActivity" />
+        <activity android:name=".asset_operate.sale_nhasset.SymbolChooseActivity" />
 
         <activity
             android:name=".contact.EditContactActivity"
