feat (TransferNHAssetActivity)  add transfer nh asset Interaction Logic

--- a/BCX_Wallet/module_mine/src/main/AndroidManifest.xml
+++ b/BCX_Wallet/module_mine/src/main/AndroidManifest.xml
@@ -14,6 +14,7 @@
         <activity android:name=".asset_overview.NHAssetDetailActivity" />
         <activity android:name=".asset_operate.sale_nhasset.SaleNHAssetActivity" />
         <activity android:name=".asset_operate.sale_nhasset.SymbolChooseActivity" />
+        <activity android:name=".asset_operate.transfer_nhasset.TransferNHAssetActivity" />
 
         <activity
             android:name=".contact.EditContactActivity"
