--- a/BCX_Wallet/module_asset/build.gradle
+++ b/BCX_Wallet/module_asset/build.gradle
@@ -39,4 +39,6 @@ dependencies {
     annotationProcessor rootProject.ext.dependencies["arouter-annotationProcessor"]
     // tabLayout
     implementation 'com.flyco.tablayout:FlycoTabLayout_Lib:2.1.2@aar'
+
+    implementation 'in.srain.cube:ptr-load-more:1.0.6'
 }
