fix (app) build.gradle add arouter denpendence

--- a/BCX_Wallet/app/build.gradle
+++ b/BCX_Wallet/app/build.gradle
@@ -86,4 +86,6 @@ dependencies {
     implementation project(':library_base')
     implementation project(':cocos_sdk')
     implementation project(':module_zxing')
+
+    annotationProcessor rootProject.ext.dependencies["arouter-annotationProcessor"]
 }
