--- a/BCX_Wallet/library_base/build.gradle
+++ b/BCX_Wallet/library_base/build.gradle
@@ -75,7 +75,7 @@ dependencies {
     }
 
     // module
-    api project(':bcx_sdk')
+    api project(':cocos_bcx_sdk')
     api project(':library_res')
 
     //network
