--- a/BCX_Wallet/module_login/build.gradle
+++ b/BCX_Wallet/module_login/build.gradle
@@ -29,7 +29,7 @@ dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation project(':library_base')
     implementation project(':library_res')
-    implementation project(':bcx_sdk-debug')
+    implementation project(':bcx_sdk')
     //lombok
     compileOnly 'org.projectlombok:lombok:1.18.2'
     annotationProcessor "org.projectlombok:lombok:1.18.2"
