fix (string.xml) modify url

--- a/BCX_Wallet/library_base/build.gradle
+++ b/BCX_Wallet/library_base/build.gradle
@@ -23,7 +23,7 @@ android {
     buildTypes {
         release {
             minifyEnabled true
-            buildConfigField 'String', 'API_BASE', '"http://backend.test.cocosbcx.net"'
+            buildConfigField 'String', 'API_BASE', '"https://api-cocosbcx.cocosbcx.net/backend/"'
             buildConfigField 'String', 'DOWN_LOAD_URL', '"https://cocosbcx.oss-cn-beijing.aliyuncs.com"'
             buildConfigField 'boolean', 'IS_TEST_ENV', 'false'
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
@@ -31,7 +31,7 @@ android {
 
         debug {
             minifyEnabled false
-            buildConfigField 'String', 'API_BASE', '"http://backend.test.cocosbcx.net"'
+            buildConfigField 'String', 'API_BASE', '"https://api-cocosbcx.cocosbcx.net/backend/"'
             buildConfigField 'String', 'DOWN_LOAD_URL', '"https://cocosbcx.oss-cn-beijing.aliyuncs.com"'
             buildConfigField 'boolean', 'IS_TEST_ENV', 'true'
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
