--- a/BCX_Wallet/module_mine/src/main/AndroidManifest.xml
+++ b/BCX_Wallet/module_mine/src/main/AndroidManifest.xml
@@ -15,6 +15,7 @@
         <activity android:name=".asset_operate.sale_nhasset.SaleNHAssetActivity" />
         <activity android:name=".asset_operate.sale_nhasset.SymbolChooseActivity" />
         <activity android:name=".asset_operate.transfer_nhasset.TransferNHAssetActivity" />
+        <activity android:name=".reset_password.ResetPasswordActivity" />
 
         <activity
             android:name=".contact.EditContactActivity"
