--- a/BCX_Wallet/library_base/build.gradle
+++ b/BCX_Wallet/library_base/build.gradle
@@ -24,6 +24,8 @@ android {
         release {
             minifyEnabled true
             buildConfigField 'String', 'API_BASE', '"https://api-cocosbcx.cocosbcx.net/backend/"'
+            buildConfigField 'String', 'COCOS_PRICE_BASE', '"http://fxhapi.feixiaohao.com/public/"'
+            buildConfigField 'String', 'EXCHANGE_CURRENCY', '"http://op.juhe.cn/onebox/exchange/"'
             buildConfigField 'String', 'DOWN_LOAD_URL', '"https://cocosbcx.oss-cn-beijing.aliyuncs.com"'
             buildConfigField 'boolean', 'IS_TEST_ENV', 'false'
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
@@ -32,6 +34,8 @@ android {
         debug {
             minifyEnabled false
             buildConfigField 'String', 'API_BASE', '"https://api-cocosbcx.cocosbcx.net/backend/"'
+            buildConfigField 'String', 'COCOS_PRICE_BASE', '"http://fxhapi.feixiaohao.com/public/"'
+            buildConfigField 'String', 'EXCHANGE_CURRENCY', '"http://op.juhe.cn/onebox/exchange/"'
             buildConfigField 'String', 'DOWN_LOAD_URL', '"https://cocosbcx.oss-cn-beijing.aliyuncs.com"'
             buildConfigField 'boolean', 'IS_TEST_ENV', 'true'
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
