--- a/BCX_Wallet/app/build.gradle
+++ b/BCX_Wallet/app/build.gradle
@@ -21,10 +21,10 @@ android {
 
     signingConfigs {
         debug {
-            storeFile file(DEBUG_STORE_FILE)
-            storePassword DEBUG_STORE_PASSWORD
-            keyAlias DEBUG_KEY_ALIAS
-            keyPassword DEBUG_KEY_PASSWORD
+            storeFile file('../cocos_bcx_debug.keystore')
+            storePassword '123456'
+            keyAlias = 'cocos_bcx_debug.keystore'
+            keyPassword '123456'
         }
 
         release {
