--- a/BCX_Wallet/app/src/main/AndroidManifest.xml
+++ b/BCX_Wallet/app/src/main/AndroidManifest.xml
@@ -29,6 +29,17 @@
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
+
+                <data
+                    android:host="wallet.com"
+                    android:scheme="cocosbcx" />
+            </intent-filter>
         </activity>
 
         <provider
