feat (library_base)  add Invoke Login page

--- a/BCX_Wallet/library_base/build.gradle
+++ b/BCX_Wallet/library_base/build.gradle
@@ -80,6 +80,7 @@ dependencies {
 
     // module
     api project(':bcx_sdk')
+    api project(':invoke_sdk')
     api project(':library_res')
 
     //network
