feat (InvokeTransferActivity)  add invoke transfer page

--- a/BCX_Wallet/library_base/src/main/AndroidManifest.xml
+++ b/BCX_Wallet/library_base/src/main/AndroidManifest.xml
@@ -18,6 +18,9 @@
         <activity
             android:name=".invokedpages.InvokeLoginActivity"
             android:launchMode="singleTask" />
+        <activity
+            android:name=".invokedpages.InvokeTransferActivity"
+            android:launchMode="singleTask" />
 
         <receiver android:name=".receiver.NetStateChangeReceiver">
             <intent-filter>
