feat (InvokeContractActivity)  add invoke contract page

--- a/BCX_Wallet/library_base/src/main/AndroidManifest.xml
+++ b/BCX_Wallet/library_base/src/main/AndroidManifest.xml
@@ -22,6 +22,10 @@
             android:name=".invokedpages.InvokeTransferActivity"
             android:launchMode="singleTask" />
 
+        <activity
+            android:name=".invokedpages.InvokeContractActivity"
+            android:launchMode="singleTask" />
+
         <receiver android:name=".receiver.NetStateChangeReceiver">
             <intent-filter>
                 <action android:name="android.net.conn.CONNECTIVITY_CHANGE" />
