--- a/BCX_Wallet/build.gradle
+++ b/BCX_Wallet/build.gradle
@@ -19,6 +19,7 @@ allprojects {
         mavenCentral()
         jcenter()
         maven { url 'https://jitpack.io' }
+        maven { url 'https://dl.bintray.com/cocos-bcx/maven' }
     }
 }
 
