--- a/BCX_Wallet/library_base/build.gradle
+++ b/BCX_Wallet/library_base/build.gradle
@@ -79,11 +79,13 @@ dependencies {
     }
 
     // module
-    api project(':bcx_sdk')
+//    api project(':bcx_sdk')
+    api 'com.cocosbcx.androidsdk:bcx_sdk:1.0.0'
     api project(':library_res')
 
     //network
     api rootProject.ext.dependencies.retrofit
+    api rootProject.ext.dependencies["gson"]
     api rootProject.ext.dependencies["converter-gson"]
     api rootProject.ext.dependencies["adapter-rxjava"]
 
@@ -117,22 +119,6 @@ dependencies {
     // glide
     api 'com.github.bumptech.glide:glide:4.8.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.8.0'
-
-
-    // implenment websocket
-    api 'com.neovisionaries:nv-websocket-client:2.6'
-    // implenment bitcoinj
-    api 'org.bitcoinj:bitcoinj-core:0.14.7'
-    api group: 'com.google.code.gson', name: 'gson', version: '2.8.5'
-    api group: "org.tukaani", name: "xz", version: "1.6"
-    api 'com.squareup.okhttp3:okhttp:3.14.0'
-    // spongycastle
-    api 'com.madgag.spongycastle:core:1.58.0.0'
-    api 'com.madgag.spongycastle:prov:1.58.0.0'
-    api 'com.madgag.spongycastle:pkix:1.54.0.0'
-    api 'com.madgag.spongycastle:pg:1.54.0.0'
-    // fasterxml
-    api 'com.fasterxml.jackson.core:jackson-databind:2.9.7'
 
     // tabLayout
     api 'com.flyco.tablayout:FlycoTabLayout_Lib:2.1.2@aar'
