fix (ContractDetailViewModel)  fix contract detail empty

--- a/BCX_Wallet/gradle.properties
+++ b/BCX_Wallet/gradle.properties
@@ -1,6 +1,25 @@
+# Project-wide Gradle settings.
+# IDE (e.g. Android Studio) users:
+# Gradle settings configured through the IDE *will override*
+# any settings specified in this file.
+# For more details on how to configure your build environment visit
+# http://www.gradle.org/docs/current/userguide/build_environment.html
+# Specifies the JVM arguments used for the daemon process.
+# The setting is particularly useful for tweaking memory settings.
+org.gradle.parallel=true
+org.gradle.daemon=true
+org.gradle.jvmargs=-XX:MaxHeapSize=1024m -Xmx1024m
+# When configured, Gradle will run in incubating parallel mode.
+# This option should only be used with decoupled projects. More details, visit
+# http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
+# org.gradle.parallel=true
+isBuildModule=false
 
-isBuildModule = false
-RELEASE_KEY_ALIAS = "cocos_bcx_debug.keystore"
-RELEASE_KEY_PASSWORD = "123456"
-RELEASE_STORE_FILE = "../cocos_bcx_debug.keystore"
-RELEASE_STORE_PASSWORD = "123456"
+RELEASE_KEY_ALIAS=qukuai
+RELEASE_KEY_PASSWORD=qukuai448257
+RELEASE_STORE_FILE=C\:\\Users\\ningkang.guo\\Desktop\\Keeystore\\cocos_bcx.jks
+RELEASE_STORE_PASSWORD=qukuai448257
+
+#debug
+
+
