update (bcx_sdk) fix sdk contract transfer callback bug

--- a/BCX_Wallet/library_base/build.gradle
+++ b/BCX_Wallet/library_base/build.gradle
@@ -79,8 +79,8 @@ dependencies {
     }
 
     // module
-//    api project(':bcx_sdk')
-    api 'com.cocosbcx.androidsdk:bcx_sdk:1.0.0'
+    api project(':bcx_sdk')
+//    api 'com.cocosbcx.androidsdk:bcx_sdk:1.0.0'
     api project(':library_res')
 
     //network
