--- a/BCX_Wallet/library_base/build.gradle
+++ b/BCX_Wallet/library_base/build.gradle
@@ -79,8 +79,8 @@ dependencies {
     }
 
     // module
-    api project(':bcx_sdk')
-//    api 'com.cocosbcx.androidsdk:bcx_sdk:1.0.0'
+//    api project(':bcx_sdk')
+    api 'com.cocosbcx.androidsdk:bcx_sdk:1.0.1'
     api project(':library_res')
 
     //network
@@ -125,4 +125,20 @@ dependencies {
 
     // ptr-load-more
     api 'in.srain.cube:ptr-load-more:1.0.6'
+
+     //sdk imp
+    // implenment websocket
+//    api 'com.neovisionaries:nv-websocket-client:2.6'
+//    // implenment bitcoinj
+//    api 'org.bitcoinj:bitcoinj-core:0.14.7'
+//    api group: 'com.google.code.gson', name: 'gson', version: '2.8.5'
+//    api group: "org.tukaani", name: "xz", version: "1.6"
+//    api 'com.squareup.okhttp3:okhttp:3.14.0'
+//    // spongycastle
+//    api 'com.madgag.spongycastle:core:1.58.0.0'
+//    api 'com.madgag.spongycastle:prov:1.58.0.0'
+//    api 'com.madgag.spongycastle:pkix:1.54.0.0'
+//    api 'com.madgag.spongycastle:pg:1.54.0.0'
+//    // fasterxml
+//    api 'com.fasterxml.jackson.core:jackson-databind:2.9.7'
 }
