--- a/BCX_Wallet/settings.gradle
+++ b/BCX_Wallet/settings.gradle
@@ -1,1 +1,1 @@
-include ':app', ':module_login', ':module_asset', ':module_found', ':module_mine', ':library_base', ':library_res', "module_zxing"
+include ':app', ':module_login', ':module_asset', ':module_found', ':module_mine', ':library_base', ':library_res', "module_zxing","module_flowlib"
