--- a/BCX_Wallet/app/build.gradle
+++ b/BCX_Wallet/app/build.gradle
@@ -21,10 +21,15 @@ android {
 
     signingConfigs {
         debug {
-            storeFile file('../cocos_bcx_debug.keystore')
-            storePassword '123456'
-            keyAlias = 'cocos_bcx_debug.keystore'
-            keyPassword '123456'
+            try {
+                storeFile file('C\\:\\\\Users\\\\Administrator\\\\Desktop\\\\cocos_bcx.jks')
+                keyAlias RELEASE_KEY_ALIAS
+                keyPassword RELEASE_KEY_PASSWORD
+                storeFile file(RELEASE_STORE_FILE)
+                storePassword RELEASE_STORE_PASSWORD
+            } catch (ex) {
+                throw new InvalidKeyException("You should define RELEASE_STORE_PASSWORD and RELEASE_KEY_PASSWORD in gradle.properties.")
+            }
         }
 
         release {
@@ -43,7 +48,7 @@ android {
         release {
             minifyEnabled false
             buildConfigField 'boolean', 'IS_TEST_ENV', 'false'
-            buildConfigField 'String', 'API_BASE', '"https://api-cocosbcx.cocosbcx.net/backend/"'
+            buildConfigField 'String', 'API_BASE', '"https://api.cocosbcx.net/backend/"'
             buildConfigField 'String', 'COCOS_PRICE_BASE', '"http://fxhapi.feixiaohao.com/public/"'
             buildConfigField 'String', 'EXCHANGE_CURRENCY', '"http://op.juhe.cn/onebox/exchange/"'
             buildConfigField 'String', 'DOWN_LOAD_URL', '"https://cocosbcx.oss-cn-beijing.aliyuncs.com"'
@@ -54,7 +59,7 @@ android {
         debug {
             minifyEnabled false
             buildConfigField 'boolean', 'IS_TEST_ENV', 'true'
-            buildConfigField 'String', 'API_BASE', '"https://api-cocosbcx.cocosbcx.net/backend/"'
+            buildConfigField 'String', 'API_BASE', '"https://api.cocosbcx.net/backend/"'
             buildConfigField 'String', 'DOWN_LOAD_URL', '"https://cocosbcx.oss-cn-beijing.aliyuncs.com"'
             buildConfigField 'String', 'COCOS_PRICE_BASE', '"http://fxhapi.feixiaohao.com/public/"'
             buildConfigField 'String', 'EXCHANGE_CURRENCY', '"http://op.juhe.cn/onebox/exchange/"'
