--- a/BCX_Wallet/build.gradle
+++ b/BCX_Wallet/build.gradle
@@ -6,6 +6,8 @@ buildscript {
     repositories {
         google()
         jcenter()
+        maven { url 'https://jitpack.io' }
+        maven { url 'https://dl.bintray.com/cocos-bcx/maven' }
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.5.3'
